k8s/istio-gateway-deployment.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: next-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - demo-app-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /_next
    route:
    - destination:
        host: nextjs-blog-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /react
    - uri:
        prefix: /static
    - uri:
        prefix: /sockjs-node
    route:
    - destination:
        host: react-app-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /vue
    - uri:
        prefix: /js
    - uri:
        prefix: /css
    - uri:
        prefix: /img
    route:
    - destination:
        host: vue-app-service
        port:
          number: 80
